--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 						<dependency>com.semanticcms:semanticcms-core-taglib</dependency>
 						<!-- Runtime Direct -->
 						<dependency>com.aoindustries:ao-servlet-firewall-webjars</dependency>
-						<dependency>org.webjars:jquery</dependency>
+						<dependency>org.webjars.npm:jquery</dependency>
 						<dependency>org.glassfish.web:jstl-impl</dependency>
 					</usedDependencies>
 				</configuration>
@@ -294,7 +294,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 				<groupId>com.aoindustries</groupId><artifactId>ao-servlet-firewall-webjars</artifactId><version>1.0.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
 			</dependency>
 			<dependency>
-				<groupId>org.webjars</groupId><artifactId>jquery</artifactId><version>3.5.1</version>
+				<groupId>org.webjars.npm</groupId><artifactId>jquery</artifactId><version>3.5.1</version>
 			</dependency>
 			<!-- javaee-web-api-bom: <groupId>org.glassfish.web</groupId><artifactId>jstl-impl</artifactId> -->
 			<!-- Runtime Transitive -->
@@ -358,7 +358,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.webjars</groupId><artifactId>jquery</artifactId>
+			<groupId>org.webjars.npm</groupId><artifactId>jquery</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
