--- a/book/pom.xml
+++ b/book/pom.xml
@@ -82,6 +82,11 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<url>https://github.com/aoindustries/semanticcms-autogit-taglib/issues</url>
 	</issueManagement>
 
+	<ciManagement>
+		<system>GitHub Actions</system>
+		<url>https://github.com/aoindustries/semanticcms-autogit-taglib/actions</url>
+	</ciManagement>
+
 	<repositories>
 		<!-- Repository required here, too, so can find parent -->
 		<repository>
